# unstar

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  contributors-list.yml  publish-pypi.yml  publish-testpypi.yml
tests/: test_cli.py  test_cli_integration.py
tests/adapters/dbt/: test_artifacts.py  test_columns.py  test_resolver.py
tests/core/: test_expander.py
unstar/: cli.py
unstar/adapters/dbt/: __init__.py  artifacts.py  columns.py  jinja.py  resolver.py
unstar/adapters/sql/: __init__.py
unstar/core/: adapters.py  expander.py  io.py  logging.py  sql.py
